# family-bible

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
inputs/: README.md
scripts/: init_db.py  set_progress.py
src/: configs.py  data.py  models.py  paths.py  processors.py  sections.py  strings.py  users.py
