[project]
name = "family-bible"
version = "0.1.0"
description = "Simple family bible reading tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.6",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "rich>=14.2.0",
    "ruff>=0.14.11",
]
