[project]
name = "family-bible"
version = "0.1.0"
description = "Simple family bible reading tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.6",
    "gcsfs>=2026.1.0",
    "pendulum>=3.1.0",
    "polars>=1.37.0,<2",
    "pydantic>=2.12.5,<3",
    "st-files-connection>=0.1.0",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "rich>=14.2.0",
    "ruff>=0.14.11",
]
